🐛 : Fixed a bug on safari "Margins bug"

--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -88,6 +88,7 @@
 
 .course-name {
   width: 130px;
+  margin-left: 8px;
 }
 .vs-last {
   font-weight: 500;
